Fix settings menu on mobile media size

--- a/themes/hello-friend-ng-fork/assets/scss/_main.scss
+++ b/themes/hello-friend-ng-fork/assets/scss/_main.scss
@@ -284,6 +284,12 @@ hr {
   display: none;
 }
 
+.hide-on-desktop {
+  @media #{$media-size-desktop} {
+    display: none;
+  }
+}
+
 .hide-on-phone {
   @media #{$media-size-phone} {
     display: none;
