--- a/themes/hello-friend-ng-fork/assets/scss/_menu.scss
+++ b/themes/hello-friend-ng-fork/assets/scss/_menu.scss
@@ -1,8 +1,11 @@
 .menu {
   background: #fafafa;
-  border-right: 1px solid;
   margin-right: 18px;
   z-index: 9999;
+
+  @media #{$media-size-desktop} {
+    border-right: 1px solid;
+  }
 
   .dark-theme & {
     background: #252627;
