--- a/themes/hello-friend-ng-fork/assets/scss/_variables.scss
+++ b/themes/hello-friend-ng-fork/assets/scss/_variables.scss
@@ -14,8 +14,9 @@ $dark-color: #a9a9b3;
 $dark-color-secondary: #73747b;
 $dark-border-color: #4a4b50;
 
-$media-size-phone: "(max-width: 684px)";
-$media-size-tablet: "(max-width: 900px)";
+$media-size-phone: "(min-width: 320px) and (max-width: 767px)";
+$media-size-tablet: "(min-width: 768px) and (max-width: 1024px)";
+$media-size-desktop: "(min-width: 1025px)";
 
 /* font face */
 //$font-face: 'Inter UI';
@@ -25,6 +26,6 @@ $font-face-normal: 'Inter UI';
 
 /* variables for js, must be the same as these in @custom-media queries */
 :root {
-  --phoneWidth: (max-width: 684px);
-  --tabletWidth: (max-width: 900px);
+  --phoneWidth: (max-width: 767px);
+  --tabletWidth: (max-width: 1024px);
 }
